Prepare for Email Notification Subscriptions

--- a/BLAZAMEmailMessage/Email/GenericEmailMessage.razor
+++ b/BLAZAMEmailMessage/Email/GenericEmailMessage.razor
@@ -1,11 +1,11 @@
-﻿@inherits EmailTemplateComponent
+﻿@inherits NotificationTemplateComponent
 
     <EmailTemplateHeader>
-    <strong>@Header</strong>
+    <strong>@EmailMessageHeader</strong>
     </EmailTemplateHeader>
    
     <EmailTemplateBody>
-        @Body
+        @EmailMessageBody
     </EmailTemplateBody>
 
 
