--- a/BLAZAMEmailMessage/Email/Notifications/NewUserWelcomeEmailMessage.razor
+++ b/BLAZAMEmailMessage/Email/Notifications/NewUserWelcomeEmailMessage.razor
@@ -1,7 +1,7 @@
 ﻿@using BLAZAM.ActiveDirectory.Interfaces
 @using BLAZAM.Helpers
 @using System.Security
-@inherits EmailTemplateComponent
+@inherits NotificationTemplateComponent
 
     <EmailTemplateHeader>
     <strong>@AppLocalization["Welcome"]</strong>
