--- a/BLAZAMEmailMessage/Email/TestEmailMessage.razor
+++ b/BLAZAMEmailMessage/Email/TestEmailMessage.razor
@@ -1,5 +1,5 @@
 ﻿
-@inherits EmailTemplateComponent
+@inherits NotificationTemplateComponent
 
     <EmailTemplateHeader>
     <strong>@AppLocalization["Success"]</strong>
