--- a/BLAZAMEmailMessage/Email/UpdateEmailMessage.razor
+++ b/BLAZAMEmailMessage/Email/UpdateEmailMessage.razor
@@ -1,4 +1,4 @@
-﻿@inherits EmailTemplateComponent
+﻿@inherits NotificationTemplateComponent
 
     <EmailTemplateHeader>
     <strong>Update Scheduled</strong>
