--- a/BLAZAMEmailMessage/Email/Notifications/NewUserWelcomeEmailMessage.razor
+++ b/BLAZAMEmailMessage/Email/Notifications/NewUserWelcomeEmailMessage.razor
@@ -1,5 +1,4 @@
-﻿@using BLAZAM.ActiveDirectory.Interfaces
-@using BLAZAM.Helpers
+﻿@using BLAZAM.Helpers
 @using System.Security
 @inherits NotificationTemplateComponent
 
