--- a/BLAZAMEmailMessage/Email/Notifications/PasswordChangedEmailMessage.razor
+++ b/BLAZAMEmailMessage/Email/Notifications/PasswordChangedEmailMessage.razor
@@ -1,5 +1,4 @@
-﻿@using BLAZAM.ActiveDirectory.Interfaces
-@using BLAZAM.Helpers
+﻿@using BLAZAM.Helpers
 @using System.Security
 @inherits NotificationTemplateComponent
 
@@ -8,7 +7,7 @@
     </EmailTemplateHeader>
    
     <EmailTemplateBody>
-    @(AppLocalization["he password for "]+Entry.CanonicalName+AppLocalization[" has been changed."])
+    @(AppLocalization["he password for "] + EntryName + AppLocalization[" has been changed."])
     <br/>
    
    
@@ -17,12 +16,12 @@
 
 @code{
     [Parameter]
-    public IAccountDirectoryAdapter Entry { get; set; }
+    public string EntryName { get; set; }
  
     public override string Render() => new ComponentRenderer<PasswordChangedEmailMessage>()
             .UseLayout<DefaultEmailLayout>()
             .AddServiceProvider(ApplicationInfo.services)
-            .Set(c=>c.Entry,Entry).Render();
+            .Set(c => c.EntryName, EntryName).Render();
 }
 
 
