--- a/BLAZAM/Pages/Configure/Notifications.razor
+++ b/BLAZAM/Pages/Configure/Notifications.razor
@@ -1,4 +1,5 @@
 ﻿@page "/notifications"
+@using BLAZAM.Gui.UI.Settings.Notifications
 @attribute [Authorize(Roles = UserRoles.SuperAdmin)]
 
 @inherits TabbedAppComponentBase
@@ -17,7 +18,7 @@
             <ChildContent>
 
 
-                <NotificationTemplates />
+                <NotificationSettings />
 
 
             </ChildContent>
