--- a/BLAZAMGui/UI/DirectoryEntryViewHeader.razor
+++ b/BLAZAMGui/UI/DirectoryEntryViewHeader.razor
@@ -64,7 +64,7 @@
                                      Icon="@Icons.Material.Filled.Edit"
                                      ToggledIcon="@Icons.Material.Filled.EditOff"
                                      ToggledColor="Color.Error"
-                                     Disabled=@(!DirectoryEntry.CanEdit)
+                                     Disabled=@(!DirectoryEntry.CanEdit && (accountEntry!=null && (accountEntry.CanAssign||accountEntry.CanUnassign)))
                                      ToggledTitle="End Edit" />
             </MudTooltip>
 
@@ -83,7 +83,6 @@
                 <MudTooltip Text="@AppLocalization["Assign To"]">
 
                     <MudIconButton OnClick="@Assign"
-                                   Disabled=@(!groupableEntry.CanAssign)
                                    Icon="@Icons.Material.Filled.GroupAdd"
                                    aria-label="assign to" />
                 </MudTooltip>
@@ -167,10 +166,7 @@
             {
                 <MudMenuItem OnClick="@Unlock">Unlock...</MudMenuItem>
             }
-            @if (groupableEntry?.CanAssign == true)
-            {
-                <MudMenuItem OnClick="@Assign">Assign To...</MudMenuItem>
-            }
+            <MudMenuItem OnClick="@Assign">Assign To...</MudMenuItem>
             @if (accountEntry?.CanDisable == true && accountEntry is not IADComputer)
             {
                 <MudMenuItem OnClick="@ResetPassword">Change Password...</MudMenuItem>
