--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -1,4 +1,7 @@
 ﻿@inherits AutoCompleteComponentBase
+@{
+//TODO Finish custom disable 
+}
 <MudAutocomplete Class="@Class"
                  Style="@Style"
                  Disabled=@Disabled
@@ -106,6 +109,9 @@
 
     [Parameter]
     public Func<IDirectoryEntryAdapter, bool> CustomResultsFilter { get; set; }
+
+    [Parameter]
+    public Func<IDirectoryEntryAdapter, bool>? CustomDisableFilter { get; set; }
     @*
     [Parameter]
     public IFluentDisplay Display { get; set; }*@
