--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -101,6 +101,8 @@
 
 @using BLAZAM.Database;
 @using BLAZAM.Database.Context;
+@using BLAZAM.Database.Models.Notifications
+
 @using BLAZAM.Database.Models;
 @using BLAZAM.Database.Models.Audit;
 @using BLAZAM.Database.Models.Permissions;
