Fill out notification triggers

--- a/BLAZAM/Pages/Computers/ViewComputer.razor
+++ b/BLAZAM/Pages/Computers/ViewComputer.razor
@@ -283,6 +283,8 @@
             {
                 Computer.Delete();
                 SnackBarService.Success(Computer.CanonicalName + " has been deleted.");
+                await AuditLogger.Computer.Deleted(Computer);
+                _ = OUNotificationService.PostAsync(Computer, NotificationType.Delete);
 
                 Nav.NavigateTo("/users/search");
 
@@ -304,6 +306,8 @@
 
 
                 await AuditLogger.Computer.Changed(Computer, Computer.Changes);
+                _ = OUNotificationService.PostAsync(Computer, NotificationType.Modify);
+
                 EditMode = false;
                 Nav.WarnOnNavigation = false;
                 SnackBarService.Success("The changes made to this computer have been saved.");
