--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -1,4 +1,5 @@
 ﻿@inherits AppModalContent
+@inject OUNotificationService OUNotificationService
 <MudContainer MaxWidth="MaxWidth.Large">
     <MudTextField Label="@AppLocalization["Username"]" @bind-Value="@User.SamAccountName" Disabled=true />
 
@@ -59,6 +60,8 @@
                     }
                     SnackBarService.Success("Changed password for " + User.DisplayName);
                     await AuditLogger.User.PasswordChanged(User, requireChangeSwitch.Value);
+                    _ = OUNotificationService.PostAsync(User, NotificationType.PasswordChange);
+
                     await InvokeAsync(Close);
 
 
